# IPUM_Lab01

./: .dockerignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  homework_app.py  homework_inference.py  inference.py  iris_model.joblib  main.py  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  training.py
config/: .env.dev  .env.prod  .env.test
tests/: test_app.py
