[project]
name = "ipum-lab01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.46.0",
]
