[project]
name = "ipum-lab01"
version = "0.1.0"
description = "Aplikacja produkcyjna ML i analizy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=3.2.0",
    "torch>=2.4.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.12.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.6.0",
]
